--- a/activities/activity3/index-builder.html
+++ b/activities/activity3/index-builder.html
@@ -556,6 +556,58 @@
                                 </div>
                             </div>
 
+                            <!-- GDP Growth Forecast (12 months) -->
+                            <div class="bg-gray-50 p-4 rounded-lg mb-4">
+                                <h4 class="font-medium text-gray-900 mb-2">GDP Growth Forecast (next 12 months)</h4>
+                                <p class="text-sm text-gray-600 mb-4">
+                                    Based on your analysis of the index, what do you expect for GDP growth in the next 12 months?
+                                </p>
+                                <div class="space-y-2">
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp12_strong" name="gdp12" value="Strong Growth (>3%)" class="mr-2">
+                                        <label for="gdp12_strong" class="text-sm">Strong Growth (>3%)</label>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp12_moderate" name="gdp12" value="Moderate Growth (1-3%)" class="mr-2" checked>
+                                        <label for="gdp12_moderate" class="text-sm">Moderate Growth (1-3%)</label>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp12_slow" name="gdp12" value="Slow Growth (0-1%)" class="mr-2">
+                                        <label for="gdp12_slow" class="text-sm">Slow Growth (0-1%)</label>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp12_negative" name="gdp12" value="Negative Growth" class="mr-2">
+                                        <label for="gdp12_negative" class="text-sm">Negative Growth</label>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <!-- GDP Growth Forecast (24 months) -->
+                            <div class="bg-gray-50 p-4 rounded-lg mb-4">
+                                <h4 class="font-medium text-gray-900 mb-2">GDP Growth Forecast (next 24 months)</h4>
+                                <p class="text-sm text-gray-600 mb-4">
+                                    Based on your analysis of the index, what do you expect for GDP growth in the next 24 months?
+                                </p>
+                                <div class="space-y-2">
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp24_strong" name="gdp24" value="Strong Growth (>3%)" class="mr-2">
+                                        <label for="gdp24_strong" class="text-sm">Strong Growth (>3%)</label>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp24_moderate" name="gdp24" value="Moderate Growth (1-3%)" class="mr-2" checked>
+                                        <label for="gdp24_moderate" class="text-sm">Moderate Growth (1-3%)</label>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp24_slow" name="gdp24" value="Slow Growth (0-1%)" class="mr-2">
+                                        <label for="gdp24_slow" class="text-sm">Slow Growth (0-1%)</label>
+                                    </div>
+                                    <div class="flex items-center">
+                                        <input type="radio" id="gdp24_negative" name="gdp24" value="Negative Growth" class="mr-2">
+                                        <label for="gdp24_negative" class="text-sm">Negative Growth</label>
+                                    </div>
+                                </div>
+                            </div>
+
                             <!-- Recession Probability -->
                             <div class="bg-gray-50 p-4 rounded-lg">
                                 <h4 class="font-medium text-gray-900 mb-2">Recession Probability (next 12-24 months)</h4>
@@ -607,12 +659,12 @@
                             <p class="text-gray-600 mb-4">
                                 First, download the Z-score data file that contains the historical values for all indicators. You'll reference this data in your AI prompt.
                             </p>
-                            <a href="data/LeadingIndicators_ZScore.csv" download class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                            <button onclick="downloadZScoreData()" class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                                 </svg>
                                 Download Z-Score Data
-                            </a>
+                            </button>
                         </div>
 
                         <div>
@@ -655,15 +707,9 @@ Also, suggest a threshold value (in standard deviations) that would signal a hig
                         <div>
                             <h3 class="text-lg font-medium text-gray-900 mb-2">3. Use the AI Response</h3>
                             <p class="text-gray-600 mb-4">
-                                After receiving the AI's response with recommended weights, you can:
+                                After receiving the AI's response with recommended weights, navigate to the TA's Google Sheet and input the AI's suggested weights
                             </p>
-                            <ul class="list-disc pl-6 space-y-2 text-gray-600">
-                                <li>Return to the "Build Index" tab and manually input the suggested weights</li>
-                                <li>Compare the AI-generated index with your own index from step 2</li>
-                                <li>Evaluate which approach produces better recession predictions</li>
-                                <li>Consider how the AI's reasoning compares to your own analysis</li>
-                                <li>Reflect on the strengths and limitations of AI-generated economic forecasts</li>
-                            </ul>
+                            
                         </div>
                     </div>
                 </div>
@@ -1290,6 +1336,47 @@ Also, suggest a threshold value (in standard deviations) that would signal a hig
             });
         }
 
+        function downloadZScoreData() {
+            // Create a direct download link
+            fetch('data/LeadingIndicators_ZScore.csv')
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error('Network response was not ok');
+                    }
+                    return response.blob();
+                })
+                .then(blob => {
+                    // Create a temporary URL for the blob
+                    const url = window.URL.createObjectURL(blob);
+
+                    // Create a temporary link element
+                    const a = document.createElement('a');
+                    a.style.display = 'none';
+                    a.href = url;
+                    a.download = 'LeadingIndicators_ZScore.csv';
+
+                    // Add to the DOM and trigger the download
+                    document.body.appendChild(a);
+                    a.click();
+
+                    // Clean up
+                    window.URL.revokeObjectURL(url);
+                    document.body.removeChild(a);
+
+                    // Show success message
+                    const button = document.querySelector('button[onclick="downloadZScoreData()"]');
+                    const originalHTML = button.innerHTML;
+                    button.innerHTML = '<svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" /></svg> Downloaded!';
+                    setTimeout(() => {
+                        button.innerHTML = originalHTML;
+                    }, 2000);
+                })
+                .catch(error => {
+                    console.error('Error downloading file:', error);
+                    alert('Failed to download the file. Please try again or contact support.');
+                });
+        }
+
         function showDefinition(indicatorId, event) {
             event.preventDefault();
             const modal = document.getElementById('definitionModal');
@@ -1387,17 +1474,19 @@ Also, suggest a threshold value (in standard deviations) that would signal a hig
             // Save the weights for display
             savedWeights = {...weights};
 
-            // Update weights display
+            // Update weights display if the container exists
             const weightsContainer = document.getElementById('savedWeights');
-            weightsContainer.innerHTML = state.indicators
-                .map(indicator => `
-                    <div class="text-sm">
-                        <div class="text-gray-600">
-                            ${indicator.label}
+            if (weightsContainer) {
+                weightsContainer.innerHTML = state.indicators
+                    .map(indicator => `
+                        <div class="text-sm">
+                            <div class="text-gray-600">
+                                ${indicator.label}
+                            </div>
+                            <div class="font-semibold">${weights[indicator.id]}%</div>
                         </div>
-                        <div class="font-semibold">${weights[indicator.id]}%</div>
-                    </div>
-                `).join('');
+                    `).join('');
+            }
 
             // Update saved values display
             const latestValues = savedIndexData.slice().reverse();
@@ -1409,15 +1498,23 @@ Also, suggest a threshold value (in standard deviations) that would signal a hig
                 new Date(v.date).getTime() <= new Date(latestValues[0].date).getTime() - 2 * 365 * 24 * 60 * 60 * 1000
             );
 
-            document.getElementById('savedCurrentValue').textContent = currentValue ? currentValue.toFixed(2) + ' standard deviations' : '-';
-            document.getElementById('savedOneYearAgo').textContent = oneYearIndex !== -1 ? latestValues[oneYearIndex].value.toFixed(2) + ' standard deviations' : '-';
-            document.getElementById('savedTwoYearsAgo').textContent = twoYearIndex !== -1 ? latestValues[twoYearIndex].value.toFixed(2) + ' standard deviations' : '-';
+            // Update forecast values
+            document.getElementById('forecastCurrentValue').textContent = currentValue ? currentValue.toFixed(2) + ' standard deviations' : '-';
+            document.getElementById('forecastOneYearAgo').textContent = oneYearIndex !== -1 ? latestValues[oneYearIndex].value.toFixed(2) + ' standard deviations' : '-';
+            document.getElementById('forecastTwoYearsAgo').textContent = twoYearIndex !== -1 ? latestValues[twoYearIndex].value.toFixed(2) + ' standard deviations' : '-';
+
+            // Copy signal analysis metrics to forecast tab
+            document.getElementById('forecastTruePositives').textContent = document.getElementById('truePositives').textContent;
+            document.getElementById('forecastFalsePositives').textContent = document.getElementById('falsePositives').textContent;
+            document.getElementById('forecastFalseNegatives').textContent = document.getElementById('falseNegatives').textContent;
+            document.getElementById('forecastAccuracy').textContent = document.getElementById('accuracy').textContent;
+            document.getElementById('forecastAvgLeadTime').textContent = document.getElementById('avgLeadTime').textContent;
 
             if (savedChart) {
                 savedChart.destroy();
             }
 
-            const ctx = document.getElementById('savedIndexChart').getContext('2d');
+            const ctx = document.getElementById('forecastChart').getContext('2d');
 
             // Get threshold value for the line
             const thresholdValue = parseFloat(document.getElementById('thresholdValue').value);
