--- a/activities/activity3/ta-dashboard.html
+++ b/activities/activity3/ta-dashboard.html
@@ -500,21 +500,31 @@
                 <div class="mb-6">
                     <h3 class="text-lg font-medium text-gray-900 mb-3">File Format</h3>
                     <p class="text-gray-600 mb-4">
-                        Create an Excel (.xlsx) or CSV file with the following format, or download our template:
+                        Create an Excel (.xlsx) or CSV file with the following format, or download our template.
+                        <span class="ml-2 text-blue-600 font-medium">
+                            New! We now support <a href="ai-weights.html" class="underline hover:text-blue-800">multiple AI models comparison</a> in one view.
+                        </span>
                     </p>
 
                     <!-- Template Download Button -->
-                    <div class="mb-4">
-                        <a href="templates/ai-weights-template.xlsx" download class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                    <div class="mb-4 flex space-x-4">
+                        <a href="templates/ai-weights-template-legacy.xlsx" download class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
                             </svg>
-                            Download Template
+                            Legacy Template
+                        </a>
+                        <a href="templates/ai-weights-template-new.xlsx" download class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4" />
+                            </svg>
+                            New Multi-Model Template
                         </a>
                     </div>
 
                     <div class="bg-gray-50 p-4 rounded-lg overflow-x-auto mb-4">
-                        <table class="min-w-full divide-y divide-gray-200">
+                        <h4 class="font-medium text-gray-700 mb-2">Legacy Format (still supported):</h4>
+                        <table class="min-w-full divide-y divide-gray-200 mb-6">
                             <thead>
                                 <tr>
                                     <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">model_name</th>
@@ -553,15 +563,60 @@
                                 </tr>
                             </tbody>
                         </table>
+
+                        <h4 class="font-medium text-gray-700 mb-2">New Format (recommended):</h4>
+                        <table class="min-w-full divide-y divide-gray-200">
+                            <thead>
+                                <tr>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Indicator</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">ChatGPT</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Claude</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Gemini</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Perplexity</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Mistral</th>
+                                    <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Deepseek</th>
+                                </tr>
+                            </thead>
+                            <tbody class="bg-white divide-y divide-gray-200">
+                                <tr>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">Yield Curve (10Y-2Y)</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">10</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">20</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">10</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">30</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">50</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">5</td>
+                                </tr>
+                                <tr>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">ISM New Orders</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">20</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">20</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">20</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">5</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">10</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">5</td>
+                                </tr>
+                                <tr>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">Building Permits</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">30</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">20</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">20</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">5</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">10</td>
+                                    <td class="px-4 py-2 whitespace-nowrap text-sm text-gray-500">10</td>
+                                </tr>
+                            </tbody>
+                        </table>
                     </div>
 
                     <div class="bg-blue-50 p-4 rounded-lg mb-4">
                         <h4 class="font-medium text-blue-800 mb-2">Important Format Requirements:</h4>
                         <ul class="list-disc pl-6 space-y-2 text-blue-700">
-                            <li>Column headers must match <strong>exactly</strong> as shown above</li>
+                            <li>For legacy format: Column headers must match <strong>exactly</strong> as shown above</li>
+                            <li>For new format: First column must be named "Indicator" and contain indicator names</li>
                             <li>Weights must be numbers that sum to 100 for each model</li>
-                            <li>The first column must be named "model_name"</li>
-                            <li>Each row represents one AI model's weights</li>
+                            <li>In legacy format: Each row represents one AI model's weights</li>
+                            <li>In new format: Each column (except the first) represents one AI model's weights</li>
                         </ul>
                     </div>
 
@@ -570,9 +625,10 @@
                     </p>
                     <ul class="list-disc pl-6 space-y-2 text-gray-600">
                         <li>The model name can be any text (e.g., "ChatGPT", "Claude", "Gemini")</li>
-                        <li>You can include up to 2 AI models in one file</li>
+                        <li>You can include multiple AI models in one file</li>
                         <li>For best results, collect responses from different AI models</li>
                         <li>After uploading, you'll be able to compare AI weights with class average weights</li>
+                        <li>The new format supports comparing weights from multiple AI models at once</li>
                     </ul>
                 </div>
 
