--- a/activities/activity3/index-builder.html
+++ b/activities/activity3/index-builder.html
@@ -699,7 +699,14 @@
 
 Based on historical performance, please recommend optimal weights (as percentages) for these indicators to create a composite index that effectively predicts recessions. The weights should sum to 100%. Please explain your reasoning for each weight, considering factors like lead time, reliability, and false signals.
 
-Also, suggest a threshold value (in standard deviations) that would signal a high probability of an upcoming recession when the composite index falls below it.</pre>
+Also, suggest a threshold value (in standard deviations) that would signal a high probability of an upcoming recession when the composite index falls below it.
+
+Additionally, please provide:
+1. A forecast for GDP growth over the next 12 months (strong growth, moderate growth, slow growth, or contraction)
+2. A forecast for GDP growth over the next 24 months (strong growth, moderate growth, slow growth, or contraction)
+3. A probability estimate (as a percentage) of a recession occurring within the next 12 months
+
+Format your response with a clear section for weights, threshold value, and these three forecasts.</pre>
                             </div>
                             <p class="text-sm text-gray-500 mt-2">Click the copy icon in the top right to copy this prompt to your clipboard.</p>
                         </div>
@@ -709,7 +716,7 @@ Also, suggest a threshold value (in standard deviations) that would signal a hig
                             <p class="text-gray-600 mb-4">
                                 After receiving the AI's response with recommended weights, navigate to the TA's Google Sheet and input the AI's suggested weights
                             </p>
-                            
+
                         </div>
                     </div>
                 </div>
