--- a/activities/activity3/ta-dashboard.html
+++ b/activities/activity3/ta-dashboard.html
@@ -502,7 +502,7 @@
                     <p class="text-gray-600 mb-4">
                         Create an Excel (.xlsx) or CSV file with the following format, or download our template.
                         <span class="ml-2 text-blue-600 font-medium">
-                            New! We now support <a href="ai-weights.html" class="underline hover:text-blue-800">multiple AI models comparison</a> in one view.
+                            New! We now support <a href="ai-weights.html" class="underline hover:text-blue-800">multiple AI models comparison</a> with platform averaging in one view.
                         </span>
                     </p>
 
@@ -629,6 +629,7 @@
                         <li>For best results, collect responses from different AI models</li>
                         <li>After uploading, you'll be able to compare AI weights with class average weights</li>
                         <li>The new format supports comparing weights from multiple AI models at once</li>
+                        <li>Models from the same platform (e.g., multiple ChatGPT responses) will be automatically averaged</li>
                     </ul>
                 </div>
 
@@ -672,7 +673,7 @@
 
                 <div class="mt-8 text-center">
                     <a href="ai-weights.html" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                        Go to AI Weights Analysis
+                        Go to AI Weights Analysis with Platform Averaging
                     </a>
                 </div>
             </div>
