--- a/activities/activity3/ta-dashboard.html
+++ b/activities/activity3/ta-dashboard.html
@@ -131,9 +131,6 @@
                     <button id="studentDataTab" class="tab-button active px-4 py-2 text-sm font-medium text-blue-600 border-b-2 border-blue-500">
                         Student Data Analysis
                     </button>
-                    <button id="aiPromptsTab" class="tab-button px-4 py-2 text-sm font-medium text-gray-500 hover:text-gray-700 hover:border-gray-300 border-b-2 border-transparent">
-                        AI Prompts & Responses
-                    </button>
                 </nav>
             </div>
         </div>
@@ -447,30 +444,12 @@
             </div>
         </div>
 
-        <!-- AI Prompts Tab Content -->
-        <div id="aiPromptsContent" class="tab-content hidden">
-            <div class="bg-white rounded-lg shadow p-6 mb-8">
-                <h2 class="text-xl font-semibold text-gray-900 mb-4">AI Weights Analysis</h2>
-                <p class="text-gray-600 mb-6">
-                    This tool allows you to analyze AI-generated weights for leading economic indicators and compare them with class averages.
-                </p>
 
-                <div class="aspect-w-16 aspect-h-9 mb-6">
-                    <iframe src="ai-weights.html" class="w-full h-screen border-0 rounded-lg shadow-lg"></iframe>
-                </div>
-
-                <div class="mt-4 text-center">
-                    <a href="ai-weights.html" target="_blank" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                        Open in New Window
-                    </a>
-                </div>
-            </div>
-        </div>
 
         <div class="text-center mt-8">
-            <button id="nextPageBtn" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
-                Next Page
-            </button>
+            <a href="ai-weights.html" class="inline-flex items-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500">
+                AI Weights Analysis
+            </a>
         </div>
     </main>
 
