--- a/activities/activity3/ta-dashboard.html
+++ b/activities/activity3/ta-dashboard.html
@@ -249,20 +249,12 @@
                                 <h4 class="font-medium text-gray-700 mb-2">12-Month GDP Growth</h4>
                                 <div class="grid grid-cols-2 gap-2 text-sm">
                                     <div>
-                                        <span class="text-gray-500">Average:</span>
+                                        <span class="text-gray-500">Most Common:</span>
                                         <span id="gdp12Avg" class="ml-2 font-medium">-</span>
                                     </div>
                                     <div>
-                                        <span class="text-gray-500">Median:</span>
+                                        <span class="text-gray-500">Sample Size:</span>
                                         <span id="gdp12Median" class="ml-2 font-medium">-</span>
-                                    </div>
-                                    <div>
-                                        <span class="text-gray-500">Min:</span>
-                                        <span id="gdp12Min" class="ml-2 font-medium">-</span>
-                                    </div>
-                                    <div>
-                                        <span class="text-gray-500">Max:</span>
-                                        <span id="gdp12Max" class="ml-2 font-medium">-</span>
                                     </div>
                                 </div>
                             </div>
@@ -270,20 +262,12 @@
                                 <h4 class="font-medium text-gray-700 mb-2">24-Month GDP Growth</h4>
                                 <div class="grid grid-cols-2 gap-2 text-sm">
                                     <div>
-                                        <span class="text-gray-500">Average:</span>
+                                        <span class="text-gray-500">Most Common:</span>
                                         <span id="gdp24Avg" class="ml-2 font-medium">-</span>
                                     </div>
                                     <div>
-                                        <span class="text-gray-500">Median:</span>
+                                        <span class="text-gray-500">Sample Size:</span>
                                         <span id="gdp24Median" class="ml-2 font-medium">-</span>
-                                    </div>
-                                    <div>
-                                        <span class="text-gray-500">Min:</span>
-                                        <span id="gdp24Min" class="ml-2 font-medium">-</span>
-                                    </div>
-                                    <div>
-                                        <span class="text-gray-500">Max:</span>
-                                        <span id="gdp24Max" class="ml-2 font-medium">-</span>
                                     </div>
                                 </div>
                             </div>
