--- a/pitchdeck.html
+++ b/pitchdeck.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Pitch Deck - Principles of Macroeconomics</title>
+<title>Pitch Deck - Higher Edgecation</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <style>
   .banner-container {
@@ -98,8 +98,8 @@
     <img src="./images/banner1.png" alt="Macroeconomics Course Banner" class="banner-image">
     <div class="banner-overlay">
       <div class="text-center text-white px-4">
-        <h2 class="course-title">Pitch Deck</h2>
-        <p class="course-subtitle">Spring 2025 • ECON 2</p>
+        <h2 class="course-title">Higher Edgecation</h2>
+        <p class="course-subtitle">Pitch Deck</p>
       </div>
     </div>
   </div>
