--- a/activities/fiscal-balance/index.html
+++ b/activities/fiscal-balance/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
     <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation"></script>
     <script src="https://cdn.jsdelivr.net/npm/papaparse@5.3.0/papaparse.min.js"></script>
+    <script src="https://unpkg.com/@supabase/supabase-js@2.38.4/dist/umd/supabase.js"></script>
     <link rel="stylesheet" href="../../styles.css">
     <style>
         .chart-container {
@@ -642,6 +643,15 @@
         </div>
     </div>
 
+    <!-- Supabase Scripts -->
+    <script src="../../js/env.js"></script>
+    <script src="../../js/supabase-init.js"></script>
+
+    <!-- Authentication Scripts -->
+    <script src="js/supabase-auth.js"></script>
+    <script src="js/supabase-scores.js"></script>
+
+    <!-- Game Scripts -->
     <script src="js/index.js"></script>
 </body>
 </html>
