--- a/games.html
+++ b/games.html
@@ -251,7 +251,7 @@
             <h2 class="mb-4">Available Games</h2>
             <div class="row justify-content-center">
                 <!-- Investment Odyssey -->
-                <div class="col-md-8">
+                <div class="col-md-6">
                     <div class="card game-card">
                         <img src="images/banner15.png" class="card-img-top game-image" alt="Investment Odyssey">
                         <div class="card-body text-center">
@@ -259,6 +259,20 @@
                             <p class="card-text">Navigate financial markets and build your investment portfolio in this interactive simulation game. Learn about different asset classes, risk management, and investment strategies.</p>
                             <div class="mt-3">
                                 <a href="activities/investment-odyssey/about.html" class="btn btn-primary btn-lg">Play Investment Odyssey</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Fiscal Balance Game -->
+                <div class="col-md-6">
+                    <div class="card game-card">
+                        <img src="images/banner14.png" class="card-img-top game-image" alt="Fiscal Balance Game">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Fiscal Balance Game</h5>
+                            <p class="card-text">Take on the role of an economic leader making critical decisions about taxation, spending, and debt management while trying to maintain public approval to get re-elected.</p>
+                            <div class="mt-3">
+                                <a href="activities/fiscal-balance/index.html" class="btn btn-primary btn-lg">Play Fiscal Balance Game</a>
                             </div>
                         </div>
                     </div>
