--- a/pitchdeck.html
+++ b/pitchdeck.html
@@ -163,6 +163,84 @@
       </iframe>
     </div>
   </div>
+
+  <!-- Prototype Links Section -->
+  <div class="mt-12 mb-8">
+    <h2 class="text-2xl font-semibold mb-6">Our Platform Evolution</h2>
+    <p class="text-gray-700 mb-8 max-w-3xl">Explore the evolution of our educational economics platform through our previous and current prototypes. See how we've refined our approach to create engaging, interactive learning experiences.</p>
+
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
+      <!-- Previous Prototype Box -->
+      <div class="bg-gradient-to-br from-blue-50 to-indigo-50 rounded-xl shadow-lg overflow-hidden border border-blue-100 transform transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+        <div class="p-6">
+          <div class="flex items-center mb-4">
+            <div class="bg-blue-100 rounded-full p-3 mr-4">
+              <svg class="w-8 h-8 text-blue-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-bold text-gray-800">Virtual Econ</h3>
+          </div>
+          <p class="text-gray-600 mb-6">Our first-generation platform focused on virtual economics simulations and interactive learning modules. This prototype established our foundation for digital economics education.</p>
+          <div class="flex items-center text-sm text-gray-500 mb-6">
+            <span class="flex items-center mr-4">
+              <svg class="w-4 h-4 mr-1 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+              </svg>
+              Launched 2023
+            </span>
+            <span class="flex items-center">
+              <svg class="w-4 h-4 mr-1 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path>
+              </svg>
+              UC Riverside
+            </span>
+          </div>
+          <a href="https://virtualecon.ucr.edu" target="_blank" class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-blue-600 hover:bg-blue-700 md:py-3 md:text-lg md:px-6 w-full transition-colors duration-200">
+            Visit Virtual Econ
+            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+
+      <!-- Current Prototype Box -->
+      <div class="bg-gradient-to-br from-emerald-50 to-teal-50 rounded-xl shadow-lg overflow-hidden border border-emerald-100 transform transition-all duration-300 hover:shadow-xl hover:-translate-y-1">
+        <div class="p-6">
+          <div class="flex items-center mb-4">
+            <div class="bg-emerald-100 rounded-full p-3 mr-4">
+              <svg class="w-8 h-8 text-emerald-600" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2m-3 7h3m-3 4h3m-6-4h.01M9 16h.01"></path>
+              </svg>
+            </div>
+            <h3 class="text-xl font-bold text-gray-800">Macroeconomics Course Website</h3>
+          </div>
+          <p class="text-gray-600 mb-6">Our current platform features enhanced interactive simulations, real-time data visualizations, and integrated game mechanics to create an immersive learning environment for economics students.</p>
+          <div class="flex items-center text-sm text-gray-500 mb-6">
+            <span class="flex items-center mr-4">
+              <svg class="w-4 h-4 mr-1 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"></path>
+              </svg>
+              Launched 2025
+            </span>
+            <span class="flex items-center">
+              <svg class="w-4 h-4 mr-1 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
+              </svg>
+              UCSB Economics
+            </span>
+          </div>
+          <a href="https://matthewdlang18.github.io/macroeconomics-course-website/index.html" target="_blank" class="inline-flex items-center justify-center px-6 py-3 border border-transparent text-base font-medium rounded-md text-white bg-emerald-600 hover:bg-emerald-700 md:py-3 md:text-lg md:px-6 w-full transition-colors duration-200">
+            Explore Current Platform
+            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 6H6a2 2 0 00-2 2v10a2 2 0 002 2h10a2 2 0 002-2v-4M14 4h6m0 0v6m0-6L10 14"></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 </main>
 
 <!-- Footer -->
