--- a/pitchdeck.html
+++ b/pitchdeck.html
@@ -181,7 +181,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800">Virtual Econ</h3>
           </div>
-          <p class="text-gray-600 mb-6">Our first-generation platform focused on virtual economics simulations and interactive learning modules. This prototype established our foundation for digital economics education.</p>
+          <p class="text-gray-600 mb-6">Our first-generation platform focused on virtual economics simulations.</p>
           <div class="flex items-center text-sm text-gray-500 mb-6">
             <span class="flex items-center mr-4">
               <svg class="w-4 h-4 mr-1 text-blue-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -216,7 +216,7 @@
             </div>
             <h3 class="text-xl font-bold text-gray-800">Macroeconomics Course Website</h3>
           </div>
-          <p class="text-gray-600 mb-6">Our current platform features enhanced interactive simulations, real-time data visualizations, and integrated game mechanics to create an immersive learning environment for economics students.</p>
+          <p class="text-gray-600 mb-6">Our current platform features AI-augmented activities, real-time data visualizations, and economics related games to create an immersive learning environment for economics students.</p>
           <div class="flex items-center text-sm text-gray-500 mb-6">
             <span class="flex items-center mr-4">
               <svg class="w-4 h-4 mr-1 text-emerald-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
