--- a/games.html
+++ b/games.html
@@ -251,9 +251,9 @@
             <h2 class="mb-4">Available Games</h2>
             <div class="row justify-content-center">
                 <!-- Investment Odyssey -->
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="card game-card">
-                        <img src="images/banner15.png" class="card-img-top game-image" alt="Investment Odyssey">
+                        <img src="images/banner21.png" class="card-img-top game-image" alt="Investment Odyssey">
                         <div class="card-body text-center">
                             <h5 class="card-title">Investment Odyssey</h5>
                             <p class="card-text">Navigate financial markets and build your investment portfolio in this interactive simulation game. Learn about different asset classes, risk management, and investment strategies.</p>
@@ -265,14 +265,28 @@
                 </div>
 
                 <!-- Fiscal Balance Game -->
-                <div class="col-md-6">
+                <div class="col-md-4">
                     <div class="card game-card">
-                        <img src="images/banner14.png" class="card-img-top game-image" alt="Fiscal Balance Game">
+                        <img src="images/banner22.png" class="card-img-top game-image" alt="Fiscal Balance Game">
                         <div class="card-body text-center">
                             <h5 class="card-title">Fiscal Balance Game</h5>
                             <p class="card-text">Take on the role of an economic leader making critical decisions about taxation, spending, and debt management while trying to maintain public approval to get re-elected.</p>
                             <div class="mt-3">
                                 <a href="activities/fiscal-balance/index.html" class="btn btn-primary btn-lg">Play Fiscal Balance Game</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Econ Words -->
+                <div class="col-md-4">
+                    <div class="card game-card">
+                        <img src="images/banner23.png" class="card-img-top game-image" alt="Econ Words">
+                        <div class="card-body text-center">
+                            <h5 class="card-title">Econ Words</h5>
+                            <p class="card-text">Test your economics knowledge with this word puzzle game based on your textbook. Guess economic terms, concepts, policies, and variables in six attempts or less.</p>
+                            <div class="mt-3">
+                                <a href="activities/econ-words/index.html" class="btn btn-primary btn-lg">Play Econ Words</a>
                             </div>
                         </div>
                     </div>
