--- a/activities/econ-words/index.html
+++ b/activities/econ-words/index.html
@@ -200,7 +200,8 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Economic Concepts</h5>
                         <p class="card-text">Guess economic concepts from their definitions. These are fundamental ideas in economics.</p>
-                        <a href="game.html?type=concept" class="btn btn-primary">Play Concepts</a>
+                        <a href="game.html?type=concept" class="btn btn-primary">Random Concept</a>
+                        <a href="game.html?type=concept&daily=true" class="btn btn-outline-primary ml-2">Daily Concept</a>
                     </div>
                 </div>
             </div>
@@ -210,7 +211,8 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Economic Terms</h5>
                         <p class="card-text">Test your knowledge of economic terms and acronyms used in your textbook.</p>
-                        <a href="game.html?type=term" class="btn btn-primary">Play Terms</a>
+                        <a href="game.html?type=term" class="btn btn-primary">Random Term</a>
+                        <a href="game.html?type=term&daily=true" class="btn btn-outline-primary ml-2">Daily Term</a>
                     </div>
                 </div>
             </div>
@@ -220,7 +222,8 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Policy Terms</h5>
                         <p class="card-text">Challenge yourself with economic policy terms from fiscal and monetary policy.</p>
-                        <a href="game.html?type=policy" class="btn btn-primary">Play Policies</a>
+                        <a href="game.html?type=policy" class="btn btn-primary">Random Policy</a>
+                        <a href="game.html?type=policy&daily=true" class="btn btn-outline-primary ml-2">Daily Policy</a>
                     </div>
                 </div>
             </div>
@@ -230,7 +233,8 @@
                     <div class="card-body text-center">
                         <h5 class="card-title">Economic Variables</h5>
                         <p class="card-text">Identify economic variables that economists measure and analyze.</p>
-                        <a href="game.html?type=variable" class="btn btn-primary">Play Variables</a>
+                        <a href="game.html?type=variable" class="btn btn-primary">Random Variable</a>
+                        <a href="game.html?type=variable&daily=true" class="btn btn-outline-primary ml-2">Daily Variable</a>
                     </div>
                 </div>
             </div>
