--- a/activities/econ-words/game.html
+++ b/activities/econ-words/game.html
@@ -285,9 +285,14 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"></script>
 
+    <!-- PDF.js and Natural NLP Libraries -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.4.120/pdf.min.js"></script>
+    <script src="https://unpkg.com/natural@6.10.4/dist/natural-browser.min.js"></script>
+
     <!-- Game Scripts -->
-    <script src="js/terms-data.js"></script>
-    <script src="js/game-logic.js"></script>
-    <script src="js/game-ui.js"></script>
+    <script type="module" src="js/pdf-processor.js"></script>
+    <script type="module" src="js/dynamic-terms.js"></script>
+    <script type="module" src="js/game-logic.js"></script>
+    <script type="module" src="js/game-ui.js"></script>
 </body>
 </html>
