--- a/pitchdeck.html
+++ b/pitchdeck.html
@@ -167,7 +167,7 @@
   <!-- Prototype Links Section -->
   <div class="mt-12 mb-8">
     <h2 class="text-2xl font-semibold mb-6">Our Platform Evolution</h2>
-    <p class="text-gray-700 mb-8 max-w-3xl">Explore the evolution of our educational economics platform through our previous and current prototypes. See how we've refined our approach to create engaging, interactive learning experiences.</p>
+    <p class="text-gray-700 mb-8 max-w-3xl">Explore the different prototypes of our early Higher Edgecation platform. Our first iteration focused more on gamification, while our second iteration focuses more on AI-augmented activities, with some gamification elements. Our future platform will be a full-featured, AI-augmented learning platform, including an interactive textbook, real-time data visualizations, ready-to-go lecture slides, and interactive simulations.</p>
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
       <!-- Previous Prototype Box -->
