--- a/activities/investment-odyssey/index.html
+++ b/activities/investment-odyssey/index.html
@@ -148,7 +148,7 @@
                             <a href="#" class="nav-link" id="guest-link">Continue as Guest</a>
                         </div>
                     </div>
-                    <h1 class="activity-title">Investment Odyssey</h1>
+                    <h1 class="activity-title"><a href="about.html" style="color: inherit; text-decoration: none;">Investment Odyssey</a></h1>
                     <p class="activity-date">Practice your investment skills in this simulation</p>
                 </div>
             </div>
