--- a/activities/investment-odyssey/ta-controls.html
+++ b/activities/investment-odyssey/ta-controls.html
@@ -109,7 +109,7 @@
                                     <i class="fas fa-user-shield"></i>
                                 </div>
                                 <a href="game-history.html" class="user-name" id="user-name-display">TA</a>
-                                <button class="sign-out-btn" id="sign-out-btn">Sign Out</button>
+                                <button class="sign-out-btn logout-button" id="sign-out-btn">Sign Out</button>
                             </div>
                         </div>
                     </div>
@@ -291,5 +291,8 @@
 
     <!-- TA Controls Script -->
     <script src="js/ta-controls.js?v=4"></script>
+
+    <!-- Logout Script -->
+    <script src="js/logout.js?v=1"></script>
 </body>
 </html>
